@@ -40,7 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
-* 
+* [jan] Fix searching and listing clients via the API.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1409,7 +1409,7 @@
    <date>2012-07-06</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
-* 
+* [jan] Fix searching and listing clients via the API.
    </notes>
   </release>
  </changelog>
